# MakePlanarFacesPlus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  extension_creater.ps1  extension_creator.ps1  setup.py
addon/: __init__.py  blender_manifest.toml
addon/makeplanarfacesplus/: __init__.py  operators.py  properties.py  ui.py
examples/: mpfp_example.py
mpfp/: README.md  __init__.py
src/app/: app.cpp
src/module/: module.cpp  module.hh  out.hh
